movie_frontend/src/App.css
.App {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 20px;
}

.loading {
  text-align: center;
  font-size: 1.2rem;
  margin: 20px;
}

.search-form-container {
  background-color: rgb(154, 166, 142);
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.search-form {
  border-radius: 30px 0 0 30px;
}

.search-input {
  width: 100%;
  max-width: 500px;
  margin: 20px;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 1.2rem;
  border-radius: 30px 0 0 30px;
}

